Version 6.2
  * Fixed bug in ets when very short seasonal series were passed in a data frame.
  * Fixed bug in nnetar where the initial predictor vector was reversed.
  * Corrected model name returned in nnetar().
  * Fixed bug in accuracy() when non-integer seasonality used.
  * Made auto.arima() robust to non-integer seasonality.

Version 6.1 (11 May 2015)
  * Made auto.arima more robust

Version 6.0 (9 May 2015)
  * Modified dm.test to give error when variance is zero
  * Corrected help file for splinef().
  * Fixed typo in accuracy help file regarding RMSE
  * Fixed bug in accuracy() which occurred with Arima and ets objects.
  * Fixed arima.errors() to handle Box-Cox transformed models.
  * Modified auto.arima() to be stricter on near-unit-roots.
  * Added allowmean argument in auto.arima().
  * Improved handling of constant series in Arima() and forecast.Arima().
  * Added plot.Arima() and plot.ar() functions.
  * Added as.character.Arima()
  * Captured problem in bats/tbats where data are constant.
  * Modified TBATS and BATS estimation to avoid occasional instabilities.
  * Fixed bug in forecasts from bats which labelled them as TBATS.
  * Added allow.multiplicative.trend argument to ets().
  * Set allow.multiplictive.trend=FALSE in stlf(), stlm() and forecast.ts().
  * Simplified arguments in stlf().
  * Added taperedacf and taperedpacf functions
  * Added functions for bootstrapping time series

Version 5.9 (26 February 2015)
  * Improved documentation of accuracy() function.
  * Fixed occasional bug in accuracy() when test set is a single observation.
  * Improved Acf() to give better handling of horizontal axis for seasonal data or when ... is passed.
  * Removed print.Arima and predict.Arima and added print.ARIMA
  * method argument now passed when re-fitting an ARIMA model.
  * Fixed error when CH test applied to short series

Version 5.8 (6 January 2015)
  * Fixed bug in versions of R before 3.10 when using fourier and fourierf.