@@ -4,6 +4,7 @@ Version 6.2
   * Corrected model name returned in nnetar().
   * Fixed bug in accuracy() when non-integer seasonality used.
   * Made auto.arima() robust to non-integer seasonality.
+  * Fixed bug in auto.arima where allowmean was ignored when stepwise=FALSE.
 
 Version 6.1 (11 May 2015)
   * Made auto.arima more robust
